deformation/jitfailure-dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5/error.log
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp: In member function ‘virtual void dolfin::dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp:63:26: error: ‘L’ was not declared in this scope
           values[0] = (((L-abs(x[0]))/(L-r))*sqrt(a0*a0*pow(cos(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)+pow(sin(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)/(a0*a0))+((abs(x[0])-r)/(L-r)))*x[0];
                          ^
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp:63:42: error: ‘r’ was not declared in this scope
           values[0] = (((L-abs(x[0]))/(L-r))*sqrt(a0*a0*pow(cos(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)+pow(sin(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)/(a0*a0))+((abs(x[0])-r)/(L-r)))*x[0];
                                          ^
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp:63:51: error: ‘a0’ was not declared in this scope
           values[0] = (((L-abs(x[0]))/(L-r))*sqrt(a0*a0*pow(cos(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)+pow(sin(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)/(a0*a0))+((abs(x[0])-r)/(L-r)))*x[0];
                                                   ^~
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp:63:51: note: suggested alternative: ‘y0’
           values[0] = (((L-abs(x[0]))/(L-r))*sqrt(a0*a0*pow(cos(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)+pow(sin(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)/(a0*a0))+((abs(x[0])-r)/(L-r)))*x[0];
                                                   ^~
                                                   y0
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp:63:98: error: ‘a2’ was not declared in this scope
           values[0] = (((L-abs(x[0]))/(L-r))*sqrt(a0*a0*pow(cos(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)+pow(sin(atan2(a0*a0*tan(atan2(x[1],x[0])-a2))),2)/(a0*a0))+((abs(x[0])-r)/(L-r)))*x[0];
                                                                                                  ^~
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp:63:98: note: suggested alternative:
In file included from /usr/include/boost/optional/optional.hpp:35:0,
                 from /usr/include/boost/optional.hpp:15,
                 from /usr/local/include/dolfin/parameter/Parameters.h:24,
                 from /usr/local/include/dolfin/common/Variable.h:28,
                 from /usr/local/include/dolfin/function/GenericFunction.h:30,
                 from /usr/local/include/dolfin/function/Expression.h:28,
                 from /tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp:13:
/usr/include/boost/type_traits/type_with_alignment.hpp:89:40: note:   ‘boost::tt_align_ns::a2’
 struct __attribute__((__aligned__(2))) a2 {};
                                        ^~
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp: In member function ‘virtual double dolfin::dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5::get_property(std::__cxx11::string) const’:
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp:76:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "alpha0") return alpha0;          if (name == "alpha1") return alpha1;
           ^~
/tmp/tmpiaxbfpes/dolfin_expression_0a12a7b9842bfb2a913577e7c1becce5.cpp:76:57: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "alpha0") return alpha0;          if (name == "alpha1") return alpha1;
                                                         ^~
